United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6856025 assert(_base >= OopPtr && _base <= KlassPtr,"Not a Java pointer")
6856025 : assert(_base >= OopPtr && _base <= KlassPtr,"Not a Java pointer")

Details
Type:
Bug
Submit Date:
2009-06-30
Status:
Resolved
Updated Date:
2010-04-03
Project Name:
JDK
Resolved Date:
2009-07-15
Component:
hotspot
OS:
solaris_10
Sub-Component:
compiler
CPU:
sparc
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs16
Fixed Versions:
hs16

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
Regression after 6818666 fix.

% cp test/compiler/6711117/Test.java ./
% javac Test.java
% bin/java -d64 -Xcomp -XX:+UseCompressedOops Test
VM option '+UseCompressedOops'
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/type.hpp:1096
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P2/B/200350.never/source/src/share/vm/opto/type.hpp:1096), pid=8537, tid=15
#  Error: assert(_base >= OopPtr && _base <= KlassPtr,"Not a Java pointer")
#
# JRE version: 7.0-b52
# Java VM: OpenJDK 64-Bit Server VM (16.0-b03-2009-06-26-200350.never.6818666-fastdebug compiled mode solaris-amd64 compressed oops)
# An error report file with more information is saved as:
# /export/home/kvn/VM/hs_err_pid8537.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#

                                    

Comments
EVALUATION

The changes that computed the TypeOopPtr for the prebarrier didn't take into account that the the adr_type for field references with compressed oops is the narrow type.  The fix is to use a new accessor make_oopptr to transparently handle narrow oop types.
                                     
2009-07-02
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/bf3489cc0aa0
                                     
2009-07-01



Hardware and Software, Engineered to Work Together