6856025: assert(_base >= OopPtr && _base <= KlassPtr,"Not a Java pointer")

Reviewed-by: kvn